--- a/app/src/main/res/layout/activity_boas_vindas.xml
+++ b/app/src/main/res/layout/activity_boas_vindas.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/boasvindas"
-    tools:context="com.softwareonze.deliveryparagominas.BoasVindasActivity">
+    tools:context="com.softwareonze.deliveryparagominas.Activitys.BoasVindasActivity">
 
     <Button
         android:id="@+id/bt_iniciar"
