--- a/app/src/main/res/layout/app_bar_nav.xml
+++ b/app/src/main/res/layout/app_bar_nav.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.softwareonze.deliveryparagominas.NavActivity">
+    tools:context="com.softwareonze.deliveryparagominas.Activitys.NavActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
