--- a/app/src/main/res/layout/content_nav.xml
+++ b/app/src/main/res/layout/content_nav.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.softwareonze.deliveryparagominas.NavActivity"
+    tools:context="com.softwareonze.deliveryparagominas.Activitys.NavActivity"
     tools:showIn="@layout/app_bar_nav">
 
     <FrameLayout
