--- a/app/src/main/res/layout/fragment_cardapio.xml
+++ b/app/src/main/res/layout/fragment_cardapio.xml
@@ -2,14 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#CCCCCC"
-    tools:context="com.softwareonze.deliveryparagominas.Fragmentos.PratosFragment">
+    tools:context="com.softwareonze.deliveryparagominas.ModeloInterno.CardapioFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
     <TextView
-        android:id="@+id/tela_pratos"
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tela pratos" />
+        android:text="Cardapio frag" />
 </FrameLayout>
