--- a/app/src/main/res/layout/fragment_principal.xml
+++ b/app/src/main/res/layout/fragment_principal.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#CCCCCC"
-    tools:context="com.softwareonze.deliveryparagominas.Fragmentos.PrincipalFragment">
+    tools:context="com.softwareonze.deliveryparagominas.ModeloInterno.PrincipalFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
