--- a/app/src/main/res/layout/fragment_sobre.xml
+++ b/app/src/main/res/layout/fragment_sobre.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.softwareonze.deliveryparagominas.ModeloInterno.SobreFragment">
+    tools:context="com.softwareonze.deliveryparagominas.ModeloInterno.CarrinhoFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
