--- a/app/src/main/res/menu/menu_toddes.xml
+++ b/app/src/main/res/menu/menu_toddes.xml
@@ -2,8 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.softwareonze.deliveryparagominas.Activitys.ToddesActivity" >
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+    <item android:id="@+id/action_search"
+        android:icon="@drawable/ic_search_white_24dp"
+        android:title="@string/action_search"
         android:orderInCategory="100"
-        app:showAsAction="never" />
+        app:showAsAction="always|collapseActionView"
+        app:actionViewClass="android.support.v7.Search" />
 </menu>
